forced US formatting for bookString()